plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
}


java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

group = 'br.com.agendusp'
version = '0.0.1-SNAPSHOT'

//task('build', group: 'build') {
//    dependsOn ':backend:build'
//}

//task('run', group: 'custom') {
//    dependsOn ':backend:bootRun'
//}
repositories {
	mavenCentral()
}

ext {
	set('springCloudGcpVersion', "6.1.1")
  	set('springCloudVersion', "2024.0.1")
	set('snippetsDir', file("build/generated-snippets"))
	set('springAiVersion', "1.0.0-M8")
}

dependencies {
	implementation 'com.google.api-client:google-api-client:1.32.1'
	implementation 'org.testcontainers:testcontainers:1.21.1'
	implementation 'org.testcontainers:junit-jupiter:1.21.1'
	implementation 'org.testcontainers:mongodb:1.21.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'com.google.apis:google-api-services-calendar:v3-rev20250404-2.0.0'
  	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.ai:spring-ai-starter-model-ollama'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation platform('com.google.auth:google-auth-library-bom:1.30.1')
	implementation 'com.google.auth:google-auth-library-oauth2-http'
	implementation 'com.google.auth:google-auth-library-credentials'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'com.google.apis:google-api-services-calendar:v3-rev20250404-2.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	dependsOn test
}
